	  trust-anchor.
	- fixup canonical compare byfield routine, fix bug and also neater.
	- fixed iterator response type classification for queries of type
	  ANY and NS.
	  dig ANY gives sometimes NS rrset in AN and NS section, and parser
	  removes the NS section duplicate. dig NS gives sometimes the NS
	  in the answer section, as referral.

15 August 2007: Wouter
	- crypto calls to verify signatures.
	- unit test for rrsig verification.

14 August 2007: Wouter
	- default outgoing ports changed to avoid port 2049 by default.
	  This port is widely blocked by firewalls.
	- count infra lameness cache in memory size.
	- accounting of memory improved
	- outbound entries are allocated in the query region they are for.
	- extensive debugging for memory allocations.
	- --enable-lock-checks can be used to enable lock checking.
	- protect undefs in config.h from autoheaders ministrations.
	- print all received udp packets. log hex will print on multiple
	  lines if needed.
	- fixed error in parser with backwards rrsig references.
	- mark cycle targets for iterator did not have CD flag so failed
	  its task.

13 August 2007: Wouter
	- fixup makefile, if lexer is missing give nice error and do not
	  mess up the dependencies.
	- canonical compare routine updated.
	- canonical hinfo compare.
	- printout list of the queries that the mesh is working on.

10 August 2007: Wouter
	- malloc and free overrides that track total allocation and frees.
	  for memory debugging.
	- work on canonical sort.

9 August 2007: Wouter
	- canonicalization, signature checks
	- dname signature label count and unit test.
	- added debug heap size print to memory printout.
	- typo fixup in worker.c
	- -R needed on solaris.
	- validator override option for date check testing.

8 August 2007: Wouter
	- ldns _raw routines created (in ldns trunk).
	- sigcrypt DS digest routines
	- val_utils uses sigcrypt to perform signature cryptography.
	- sigcrypt keyset processing

7 August 2007: Wouter